--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </header>
         <main>
             <div class="slider"
-                data-slick='{"arrows" : false, "dots" : true, "infinite" : true, "autoplay" : true, "pauseOnHover" : false}'>           
+                data-slick='{"arrows" : false, "dots" : true, "infinite" : true, "autoplay" : true, "pauseOnHover" : false, "vertical": true}'>           
                 <section class="hero"
                 style="background-image: linear-gradient(to top, rgba(85, 183, 255, 0.90), rgba(126, 90, 255, 0.90)), url(../img/hero_bg.jpg);">
                     <div class="hero__text">
